default null pour le header des services

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -106,8 +106,8 @@ collections:
     fields:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "service"}
       - {label: "Lien service", name: "lienService", widget: "string"}
-      - {label: "Photo haut de page", name: "photoHaut", widget: image, required: false}
-      - {label: "Vidéo haut de page", name: "videoHaut", widget: "file", required: false}
+      - {label: "Photo haut de page", name: "photoHaut", widget: image, required: false, default: null}
+      - {label: "Vidéo haut de page", name: "videoHaut", widget: "file", required: false, default: null}
       - {label: "Nom du service", name: "nomService", widget: "string"}
       - {label: "Description du service", name: "body", widget: "markdown"}
       - {
