Ajout ordre services

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -106,6 +106,7 @@ collections:
     fields:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "service"}
       - {label: "Lien service", name: "lienService", widget: "string"}
+      - {label: "Ordre d'affichage", name: ordre, widget: number, valueType: int, min: 1}
       - {label: "Photo haut de page", name: "photoHaut", widget: image, required: false, default: null}
       - {label: "Vidéo haut de page", name: "videoHaut", widget: "file", required: false, default: null}
       - {label: "Nom du service", name: "nomService", widget: "string"}
